# anymeal

./: .gitignore  .travis.yml  Dockerfile  Dockerfile.sid  Dockerfile.stretch  Makefile.am  Makefile.appimage  Makefile.docker  Makefile.package  Makefile.sid  Makefile.stretch  README.md  anymeal.cc  anymeal.cpp  anymeal.nsi  autogen.sh  configure.ac  configure.debian  configure.mingw  downloadthehoseys.sh  index.html  ingredient.cc  ingredient.hh  main_window.cc  main_window.cpp  main_window.hh  main_window.hpp  main_window.ui  mealmaster.hh  mealmaster.ll  partition.cpp  partition.hpp  recipe.cc  recipe.hh  simple-grid.css  snapcraft.yaml  test.mmf  test2.mmf  test_composite.mmf  test_fraction.mmf  (+16 more)
.github/workflows/: anymeal.yml
.gitlab/workflows/: anymeal.yml
anymeal/: .gitignore  Makefile.am  add_dialog.cc  add_dialog.hh  add_dialog.ui  anymeal.appdata.xml  anymeal.cc  anymeal.desktop  anymeal.man  anymeal.nsi  anymeal.qrc  anymeal_de.ts  categories_model.cc  categories_model.hh  category_dialog.cc  category_dialog.hh  category_dialog.ui  category_picker.cc  category_picker.hh  category_picker.ui  category_table_model.cc  category_table_model.hh  converter_window.cc  converter_window.hh  converter_window.ui  database.cc  database.hh  de.wedesoft.anymeal.appdata.xml  de.wedesoft.anymeal.desktop  edit_dialog.cc  edit_dialog.hh  edit_dialog.ui  export.cc  export.hh  export_dialog.cc  export_dialog.hh  export_dialog.ui  html.cc  html.hh  icon.rc  (+30 more)
anymeal/locale/: Makefile.am
anymeal/locale/de/: Makefile.am  anymeal_qt.ts
anymeal/locale/fr/: Makefile.am  anymeal_qt.ts
anymeal/locale/it/: Makefile.am  anymeal_qt.ts
anymeal/locale/ka/: Makefile.am  anymeal_qt.ts
anymeal/locale/nl/: Makefile.am  anymeal_qt.ts
anymeal/locale/sl/: Makefile.am  anymeal_qt.ts
debian/: anymeal.lintian-overrides  changelog  clean  control  copyright  rules  watch
debian/upstream/: metadata  signing-key.asc
etc/: Dockerfile  docker-compose.yml  mui.nsi
m4/: ax_have_qt.m4
tests/: .gitignore  Makefile.am  suite.cc  test_continuation.mmf  test_database.cc  test_export.cc  test_html.cc  test_ingredient.cc  test_ingredient.mmf  test_instructions10.mmf  test_instructions8.mmf  test_mealmaster.cc  test_no_servings.mmf  test_noamount.mmf  test_partition.cc  test_recipe.cc  test_recode.cc  test_section_spaces.mmf
tests/fixtures/: Makefile.am  append_to_line.mmf  column_major.mmf  continuation.mmf  continuation_whitespace.mmf  discard_two_spaces.mmf  empty_ingredient_section.mmf  erroneous_continuation.mmf  float.mmf  float_crlf.mmf  float_crlf2.mmf  float_eol3.mmf  flush_ingredients.mmf  force_newline.mmf  fraction.mmf  header.mmf  header2.mmf  ignore_0x14.mmf  ignore_newlines.mmf  ignore_whitespaces.mmf  ingredient.mmf  ingredient_like.mmf  ingredient_section.mmf  instruction_eol.mmf  instruction_eol2.mmf  instruction_eol3.mmf  instruction_eol4.mmf  instruction_header.mmf  instruction_number.mmf  instruction_section.mmf  instructions1.mmf  instructions5.mmf  instructions9.mmf  mixed.mmf  no_ingredient.mmf  no_servings.mmf  noamount.mmf  overlong_ingredient.mmf  overlong_ingredient2.mmf  preparation.mmf  (+17 more)
