EXTRA_DIST = header.mmf header2.mmf ingredient.mmf preparation.mmf fraction.mmf float.mmf mixed.mmf noamount.mmf continuation.mmf \
						 two_ingredients.mmf instructions1.mmf instructions2.mmf instructions3.mmf instructions4.mmf instructions5.mmf \
						 instructions6.mmf instructions7.mmf instructions8.mmf instructions9.mmf instructions10.mmf two_instructions.mmf \
						 no_servings.mmf ingredient_section.mmf section_hyphen.mmf section_spaces.mmf instruction_section.mmf \
						 ignore_newlines.mmf append_to_line.mmf stray_ingredient.mmf instruction_header.mmf skip_leading_spaces.mmf \
						 force_newline.mmf ignore_whitespaces.mmf float_crlf.mmf float_eol.mmf float_eol2.mmf
