EXTRA_DIST = header.mmf header2.mmf ingredient.mmf preparation.mmf fraction.mmf float.mmf mixed.mmf noamount.mmf continuation.mmf \
						 two_ingredients.mmf instructions1.mmf instructions2.mmf instructions3.mmf instructions4.mmf instructions5.mmf \
						 instructions6.mmf instructions7.mmf instructions8.mmf instructions9.mmf instructions10.mmf two_instructions.mmf \
						 no_servings.mmf ingredient_section.mmf section_hyphen.mmf section_spaces.mmf instruction_section.mmf \
						 ignore_newlines.mmf append_to_line.mmf stray_ingredient.mmf instruction_header.mmf skip_leading_spaces.mmf \
						 force_newline.mmf ignore_whitespaces.mmf instruction_number.mmf float_crlf.mmf instruction_eol.mmf \
						 instruction_eol2.mmf instruction_eol3.mmf instruction_eol4.mmf no_ingredient.mmf two_columns.mmf column_major.mmf \
						 three_ingredients.mmf flush_ingredients.mmf two_column_section.mmf overlong_ingredient.mmf overlong_ingredient2.mmf \
						 two_column_continuation.mmf two_column_continuation2.mmf two_column_continuation3.mmf two_column_continuation4.mmf \
						 two_column_trailing.mmf continuation_whitespace.mmf empty_ingredient_section.mmf section_whitespace.mmf \
						 erroneous_continuation.mmf discard_two_spaces.mmf ingredient_like.mmf
